added verification button, adjusted Next student action buttons

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
         {
           "button": "verSSN",
           "text": "verified SSN // \n"
+        },
+        {
+          "button": "verByXfer",
+          "text": "verified per transferring agent // \n"
         }
       ]
     },
@@ -509,55 +513,55 @@
         },
         {
           "button": "sp D reg",
-          "text": "nsa: spring D reg by 3/6. \n"
+          "text": "nsa: spring D reg by 3/6. //\n"
         },
         {
           "button": "sp D fci",
-          "text": "nsa: spring D fci by 3/11. \n"
+          "text": "nsa: spring D fci by 3/11. //\n"
         },
         {
           "button": "su ABJ reg",
-          "text": "nsa: summer ABJ reg by 5/1. \n"
+          "text": "nsa: summer ABJ reg by 5/1. //\n"
         },
         {
           "button": "su ABJ fci",
-          "text": "nsa: summer ABJ fci by 5/6. \n"
+          "text": "nsa: summer ABJ fci by 5/6. //\n"
         },
         {
           "button": "su D reg",
-          "text": "nsa: summer D reg by 6/12. \n"
+          "text": "nsa: summer D reg by 6/12. //\n"
         },
         {
           "button": "su D fci",
-          "text": "nsa: summer D fci by 6/17. \n"
+          "text": "nsa: summer D fci by 6/17. //\n"
         },
         {
           "button": "f ABJ reg",
-          "text": "nsa: fall ABJ reg by 8/7. \n"
+          "text": "nsa: fall ABJ reg by 8/7. //\n"
         },
         {
           "button": "f ABJ fci",
-          "text": "nsa: fall ABJ fci by 8/12. \n"
+          "text": "nsa: fall ABJ fci by 8/12. //\n"
         },
         {
           "button": "f C reg",
-          "text": "nsa: fall C reg by 9/4. \n"
+          "text": "nsa: fall C reg by 9/4. //\n"
         },
         {
           "button": "f C fci",
-          "text": "nsa: fall C fci by 9/9. \n"
+          "text": "nsa: fall C fci by 9/9. //\n"
         },
         {
           "button": "f D reg",
-          "text": "nsa: fall D reg by 10/9. \n"
+          "text": "nsa: fall D reg by 10/9. //\n"
         },
         {
           "button": "f D fci",
-          "text": "nsa: fall D fci by 10/14. \n"
+          "text": "nsa: fall D fci by 10/14. //\n"
         },
         {
           "button": "noteWaiting",
-          "text": "note: student waiting on departmental decision // \n"
+          "text": "note: student waiting on departmental decision //\n"
         },
         {
           "button": "crc",
