scroll bars dark now through CSS change

--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
       cursor: pointer;
       margin-bottom: 5px;
     }
+
+    /* Style for the scrollbar */
+    #sidebar::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    #sidebar::-webkit-scrollbar-track {
+      background: #2d3748;
+      /* Dark background for the track */
+    }
+
+    #sidebar::-webkit-scrollbar-thumb {
+      background: #4a5568;
+      /* Darker thumb */
+    }
+
+    #sidebar::-webkit-scrollbar-thumb:hover {
+      background: #63b3ed;
+      /* Slightly lighter thumb on hover */
+    }
   </style>
 </head>
 
