--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Custom Notepad Generator</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
+    :root {
+      color-scheme: dark;
+    }
+    
     body {
       background-color: #1a202c;
       color: #ffffff;
