fixed financial aid wrong number

--- a/index.html
+++ b/index.html
@@ -658,7 +658,8 @@
         },
         {
           "button": "fao",
-          "text": "and transferred to financial aid office 5924406 "
+          "text": "and transferred to financial aid office 5554406
+ "
         },
         {
           "button": "mao",
