--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
           "button": "nsas",
           "text": "next student actions: \n"
         },
+        // Add more buttons as needed within this category
         {
           "button": "done",
           "text": "// \n"
@@ -658,8 +659,7 @@
         },
         {
           "button": "fao",
-          "text": "and transferred to financial aid office 5554406
- "
+          "text": "and transferred to financial aid office 5554406 "
         },
         {
           "button": "mao",
@@ -744,7 +744,7 @@
         },
         {
           "button": "leaveUni",
-          "text": `Academic Advisor asked student "I am sorry to hear you are no longer interested in Liberty University. If you don’t mind me asking is there a reason we may not be the best fit for you?", \n\n\nout of potential solutions (different program, appeal, complaint, etc) discussed __________, \nstudent __________, \n\n\ndiscussed BR policy (no official paperwork but broken enrollment after nonattendance through a continuous academic year of fall > spring > summer) //\n\n\nadv student of deadlines in case of change //\n\n\n[INSERT NSA]\n\n\nnfq // \nbranded`
+          "text": `Academic Advisor asked student "I am sorry to hear you are no longer interested in Liberty University. If you don’t mind me asking is there a reason we may not be the best fit for you?", \n\n\nout of potential solutions (different program, appeal, complaint, etc) discussed __________, \nstudent __________, \n\n\ndiscussed BR policy (no official paperwork but broken enrollment after nonattendance through a continuous academic year of fall > spring > summer //\n\n\nadv student of deadlines in case of change //\n\n\n[INSERT NSA]\n\n\nnfq // \nbranded`
         }
       ]
     },
