updated some buttons: added ADV-XX for a few for ease of copy/paste

--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
         },
         {
           "button": "dpLong",
-          "text": "disclosure points covered: \n{\n\n} //\n"
+          "text": "ADV-DP\ndisclosure points covered: \n{\n\n} //\n"
         },
         {
           "button": "dpShort",
-          "text": "disclosure points covered // \n"
+          "text": "ADV-DP\ndisclosure points covered // \n"
         },
         {
           "button": "dpDec",
@@ -457,15 +457,15 @@
         },
         {
           "button": "decline",
-          "text": "offered new application, student declined // \n"
+          "text": "ADV-NP\noffered new application, student declined // \n"
         },
         {
           "button": "maybe",
-          "text": "offered new application, student will consider further, adv call us if/when ready // \n"
+          "text": "ADV-NP\noffered new application, student will consider further, adv call us if/when ready // \n"
         },
         {
           "button": "xfer",
-          "text": "offered new application, student will transfer to consulting for new application // \n\n\n\n\n\nand transferred to consulting 5554409"
+          "text": "ADV-NP\noffered new application, student will transfer to consulting for new application // \n\n\n\n\n\nand transferred to consulting 5554409"
         },
         {
           "button": "recent",
@@ -494,7 +494,7 @@
         },
         {
           "button": "covCS",
-          "text": "covered career services and sending email // \n"
+          "text": "ADV-CS\ncovered career services and sending email // \n"
         },
         {
           "button": "aware",
@@ -521,7 +521,6 @@
           "button": "nsas",
           "text": "next student actions: \n"
         },
-        // Add more buttons as needed within this category
         {
           "button": "done",
           "text": "// \n"
@@ -744,7 +743,7 @@
         },
         {
           "button": "leaveUni",
-          "text": `Academic Advisor asked student "I am sorry to hear you are no longer interested in Liberty University. If you don’t mind me asking is there a reason we may not be the best fit for you?", \n\n\nout of potential solutions (different program, appeal, complaint, etc) discussed __________, \nstudent __________, \n\n\ndiscussed BR policy (no official paperwork but broken enrollment after nonattendance through a continuous academic year of fall > spring > summer //\n\n\nadv student of deadlines in case of change //\n\n\n[INSERT NSA]\n\n\nnfq // \nbranded`
+          "text": `student planning on leaving university\n\nAcademic Advisor asked student "I am sorry to hear you are no longer interested in Liberty University. If you don’t mind me asking is there a reason we may not be the best fit for you?", \n\n\nout of potential solutions (different program, appeal, complaint, etc) discussed __________, \nstudent __________, \n\n\ndiscussed BR policy (no official paperwork but broken enrollment after nonattendance through a continuous academic year of fall > spring > summer //\n\n\nadv student of deadlines in case of change //\n\n\n[INSERT NSA]\n\n\nnfq // \nbranded`
         }
       ]
     },
