updated initial call buttons

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         },
         {
           "button": "ib",
-          "text": "inbound call // \n"
+          "text": "inbound call // \n\ncall regarding "
         },
         {
           "button": "ob",
@@ -242,27 +242,27 @@
         },
         {
           "button": "verNaD",
-          "text": "verified name and date of birth // \n"
+          "text": "verified name and date of birth // "
         },
         {
           "button": "verN",
-          "text": "verified name // \n"
+          "text": "verified name // "
         },
         {
           "button": "verD",
-          "text": "verified date of birth // \n"
+          "text": "verified date of birth // "
         },
         {
           "button": "verID",
-          "text": "verified LUID // \n"
+          "text": "verified LUID // "
         },
         {
           "button": "verSSN",
-          "text": "verified SSN // \n"
+          "text": "verified SSN // "
         },
         {
           "button": "verByXfer",
-          "text": "verified per transferring agent // \n"
+          "text": "verified per transferring agent // "
         }
       ]
     },
