adjusted spring register to extended deadline

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         },
         {
           "button": "sp D reg",
-          "text": "nsa: spring D reg by 3/6. //\n"
+          "text": "nsa: spring D reg EXTENDED TO SAT 3/9 (we close 6pm est Saturdays). //\n"
         },
         {
           "button": "sp D fci",
