buttons fixed! changed erroneous Financial Check-In extension from "reg" to "fci"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     :root {
       color-scheme: dark;
     }
-    
+
     body {
       background-color: #1a202c;
       color: #ffffff;
@@ -420,7 +420,7 @@
         },
         {
           "button": "dpLong",
-          "text": "ADV-DP\ndisclosure points covered: \n{\n\n} //\n"
+          "text": "disclosure points covered: \n{\nADV-DP\n\n} //\n"
         },
         {
           "button": "dpShort",
@@ -535,12 +535,8 @@
           "text": ""
         },
         {
-          "button": "sp D reg",
-          "text": "nsa: spring D reg EXTENDED TO SAT 3/9 (we close 6pm est Saturdays). //\n"
-        },
-        {
-          "button": "sp D fci",
-          "text": "nsa: spring D fci by 3/11. //\n"
+          "button": "EXT sp D fci",
+          "text": "nsa: spring D fci extended to Sat 3/16. //\n"
         },
         {
           "button": "su ABJ reg",
@@ -874,7 +870,7 @@
       ]
     },
     {
-      "category": "Notes",
+      "category": "Misc",
       "buttons": [
         {
           "button": "CallNotes",
@@ -891,6 +887,14 @@
         {
           "button": "callback",
           "text": "student requested callback to __________"
+        },
+        {
+          "button": "PROR",
+          "text": "PROR information: { \nCurrent GPA: \nXXXXX \n\nMissing prereqs: \nXXXXX \n\nReason for missing prereqs: \nXXXXX \n\nWhen student plans to take prereqs: \nXXXXX \n\nWhy override is being requested: \nXXXXX \n} //\n\n"
+        },
+        {
+          "button": "PPlan",
+          "text": "student aware of/would like payment plan: \n\nNumber of drafts: {INSERT NUMBER HERE] \n\nDraft dates for future drafts: [INSERT DATE] \n\n$50.00 non refundable payment plan fee \nNo future registration or transcripts/diploma until total balance is paid \nFirst draft due upon completion of FCI //\n\n"
         }
       ]
     }]
