added ADV-NP to a button

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         },
         {
           "button": "noNewApp",
-          "text": "student not interested in further schooling, no application offered // \n"
+          "text": "ADV-NP\nstudent not interested in further schooling, no application offered // \n"
         },
         {
           "button": "decline",
@@ -534,7 +534,7 @@
           "button": "N/A",
           "text": ""
         },
-        {
+        {  
           "button": "EXT sp D fci",
           "text": "nsa: spring D fci extended to Sat 3/16. //\n"
         },
