added specific semester register buttons (including discussing summer b/d overlap)

--- a/index.html
+++ b/index.html
@@ -311,6 +311,18 @@
           "text": "offered registration for the following semester, \n"
         },
         {
+          "button": "fReg",
+          "text": "offered fall registration, \n"
+        },
+        {
+          "button": "sReg",
+          "text": "offered spring registration, \n"
+        },
+        {
+          "button": "suReg",
+          "text": "offered summer registration, \n\n????? adv 2 week B/D overlap as summer is 3 weeks shorter than other semesters, \n\n"
+        },
+        {
           "button": "regd",
           "text": "registered: \n\n// \n"
         },
