added after hold resolved button for NSA

--- a/index.html
+++ b/index.html
@@ -547,6 +547,10 @@
           "text": ""
         },
         {
+          "button": "hold",
+          "text": "- after hold resolved - \n"
+        },
+        {
           "button": "su ABJ reg",
           "text": "nsa: summer ABJ reg by 5/1. //\n"
         },
