--- a/index.html
+++ b/index.html
@@ -779,6 +779,10 @@
           "text": `${date} // FAReq // \n\n\n-- end of content covered in call --\n\n\n/////////////// Notes Related to Call ///////////////\nnote: campaign to assist with course registration //\nnote: for students with financial aid-related FCI barrier // `
         },
         {
+          "button": "Old",
+          "text": `${date} // Old // \n\n\n-- end of content covered in call --\n\n\n/////////////// Notes Related to Call ///////////////\nnote: campaign to assist with course registration //\nnote: for students who have stopped attending and seeking to help them get back toward educational goals // `
+        },
+        {
           "button": "NE",
           "text": `${date} // NE // \n\n\n-- end of content covered in call --\n\n\n/////////////// Notes Related to Call ///////////////\nnote: campaign to assist with course registration //\nnote: for students with NE / business hold // `
         },
