moved information for inactivity in withdrawal section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
           "text": "{\n\n}"
         },
         {
+          "button": "slash",
+          "text": "/ _______________________________ / \n"
+        },
+        {
           "button": "nextItem",
           "text": " // \n"
         },
@@ -213,15 +217,23 @@
         },
         {
           "button": "emailed",
-          "text": "sent email to student with related information // \n"
+          "text": "sent email to student with related information "
         },
         {
           "button": "walkThru",
-          "text": "walked student through the process // \n"
+          "text": "walked student through the process "
         },
         {
           "button": "covered",
-          "text": "covered that topic with student // \n"
+          "text": "covered that topic with student "
+        },
+        {
+          "button": "unoffDCPA",
+          "text": "adv Academic Evaluator for official evals but seeing in unofficial Degree Completion Plan Audit ____________________ \n"
+        },
+        {
+          "button": "issueRes",
+          "text": "issue: ____________ / resolution: { \n\n} // \n"
         }
       ]
     },
@@ -743,7 +755,7 @@
         },
         {
           "button": "withdraw",
-          "text": `student wants to discuss drop/withdraw from __________, \n\n\nasked why student would like to leave the class, student ___________, \n\n\nasked if student has discussed the issue with professor, is aware of late policy in syllabus, or sought other assistance, student __________, \n\n\nran drop and withdrawal dialog, outcome: __________, \nXXXXX student agreed to "I understand that by dropping my course(s) there could be financial consequences, including but not limited to federal aid being returned, canceled, or recalculated. I understand that I will be responsible for any balance accrued on my account caused by the drop.", \nXXXXX asked student if needing more information from another department related to costs, student ____________, \nXXXXX dropped ___________ //\n\n\ncovered drop and withdrawal dialog, \n\n[PASTED DIALOG BELOW CALL] \n\n[DELETE UNNEEDED ITEMS]\n\n\covered chat information from \nXXXXX Student Accounts Office and \nXXXXX Financial Aid Office, \nXXXXX and Military Affairs Office, \n\n\nXXXXX adv inactivity at less than __________ days, \n\n\n????? discussed ceasing attendance review if changing mind about D term, \n\n\nXXXXX asked if student had any questions, student __________, \n\n\nstudent understands all above information and wishes to withdraw now from: \n___________ now,\nXXXXX Intent to Withdraw Form submitted, \n????? 72 hr text > student got text > student states text back and confirmation received, \n????? 72 hr hold not needed due to __________, \nXXXXX gave student confirmation code: __________, \nXXXXX adv no need for further work in class and 2 weeks to process and appear as out of the class, \nXXXXX adv optional but many students like to inform professors //\n\n\nXXXXX student understands all above information and wishes to further consider withdrawing from: \n__________,\nXXXXX entered information for intent to withdraw email, \nXXXXX adv use by 11:59 pm est on __________ if using, \nXXXXX adv around 2 weeks to process and appear as out of the class //\n\n\nXXXX student understands all above information and does not wish to withdraw // \n\n\n????? discussed submitting information for medical withdrawal, offered to send information via email, XXXXXXXXXXXX // \n\n????? offered to send information on military withdrawal, sent information // \n\n????? student would like an exception to the withdrawal outcomes due to __________, adv complaint form 7-10 bus days and no guarantees, offered to send link, __________ // \n\n\n/////////////// Drop and Withdrawal Dialog /////////////// \n\n[PASTE HERE]`
+          "text": `drop/withdraw from __________, \n\n\nasked why student would like to leave the class, student ___________, \n\n\nasked if student has discussed the issue with professor, is aware of late policy in syllabus, or sought other assistance, student __________, \n\n\nran drop and withdrawal dialog, outcome: __________, \nXXXXX student agreed to "I understand that by dropping my course(s) there could be financial consequences, including but not limited to federal aid being returned, canceled, or recalculated. I understand that I will be responsible for any balance accrued on my account caused by the drop.", \nXXXXX asked student if needing more information from another department related to costs, student ____________, \nXXXXX dropped ___________ //\n\n\ncovered drop and withdrawal dialog, \n\n[PASTED DIALOG BELOW CALL] \n\n[DELETE UNNEEDED ITEMS]\n\n\nXXXXX adv inactivity at less than __________ days, \n\n\covered chat information from \nXXXXX Student Accounts Office and \nXXXXX Financial Aid Office, \nXXXXX and Military Affairs Office, \n\n\n????? discussed ceasing attendance review if changing mind about D term, \n\n\nXXXXX asked if student had any questions, student __________, \n\n\nstudent understands all above information and wishes to withdraw now from: \n___________ now,\nXXXXX Intent to Withdraw Form submitted, \n????? 72 hr text > student got text > student states text back and confirmation received, \n????? 72 hr hold not needed due to __________, \nXXXXX gave student confirmation code: __________, \nXXXXX adv no need for further work in class and 2 weeks to process and appear as out of the class, \nXXXXX adv optional but many students like to inform professors //\n\n\nXXXXX student understands all above information and wishes to further consider withdrawing from: \n__________,\nXXXXX entered information for intent to withdraw email, \nXXXXX adv use by 11:59 pm est on __________ if using, \nXXXXX adv around 2 weeks to process and appear as out of the class //\n\n\nXXXX student understands all above information and does not wish to withdraw // \n\n\n????? discussed submitting information for medical withdrawal, offered to send information via email, XXXXXXXXXXXX // \n\n????? offered to send information on military withdrawal, sent information // \n\n????? student would like an exception to the withdrawal outcomes due to __________, adv complaint form 7-10 bus days and no guarantees, offered to send link, __________ // \n\n\n/////////////// Drop and Withdrawal Dialog /////////////// \n\n[PASTE HERE]`
         },
         {
           "button": "drop",
